--- a/src/index.html
+++ b/src/index.html
@@ -25,15 +25,15 @@
             </div>
             <div id="form">
                 <h2 id="form-title">Add your score</h2>
-                <form id="form-input" action="#">
+                <div id="form-input">
                     <input class="player-name" type="text" name="name" id="player-name" placeholder="Your name" required>
                     <input class="player-score" type="number" id="player-score" placeholder="Your score" required>
-                    <div ><button class="submit-button" id="submit-button">Submit</button></div>
-                </form>
+                    <button class="submit-button" id="submit-button">Submit</button>
+                </div>
             </div>
         </div>
        </section>
        <footer id="footer"></footer> 
 </body>
-<script src="index.js" type="module"></script>
+
 </html>
