--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                     <h2 class="score-title">Recent scores</h2>
                     <button class="refresh-button" id="refresh-button">Refresh</button>
                 </div>
-                <div id="">
+                <div id="main-list">
                     <ul id="score-list" class="score-list">
                     
                     </ul>
